# rtfinder

./: AUTHORS  Makefile.in  README  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  codon.cpp  codon.h  fasta.cpp  fasta.h  genes.cpp  genes.h  nt.cpp  nt.h  orf.cpp  orf.h  rtfinder.cpp  rttrain.cpp  translate.rb
